# blup

./: .gitignore  Cargo.toml  Justfile  README.md  dist-workspace.toml  renovate.json
.github/workflow/: ci.yml  release.yml
.github/workflows/: ci.yml  release.yml  scheduled-e2e.yml  test-install.yml
src/: commands.rs  core.rs  main.rs
src/commands/: default.rs  install.rs  list.rs  remove.rs  resolve.rs  run.rs  which.rs
src/core/: config.rs  daily.rs  downloader.rs  extractor.rs  os.rs  version.rs
tests/: cli_tests.rs  integration_test.rs  real_e2e.rs
