[package]
name = "blup"
version = "0.0.1"
authors = ["unclepomedev <unclepome.dev@gmail.com>"]
description = "The Blender Version Manager"
edition = "2024"
license = "MIT"
repository = "https://github.com/unclepomedev/blup"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
console = "0.16.2"
directories = "6.0.0"
flate2 = "1.1.8"
futures-util = "0.3.31"
indicatif = "0.18.3"
reqwest = { version = "0.13.1", features = ["json", "stream"] }
tar = "0.4.44"
tempfile = "3.24.0"
tokio = { version = "1.49.0", features = ["full"] }
xz2 = "0.1.7"
zip = "7.1.0"

[dev-dependencies]
wiremock = "0.6.5"
